syntax = "proto3";

option go_package = "github.com/waduhek/flagger/proto/environmentpb";

package environmentpb;

service Environment {
  // CreateEnvironment creates a new environment for a project.
  rpc CreateEnvironment(CreateEnvironmentRequest) returns (CreateEnvironmentResponse);
}

// === CreateEnvironment messages ===

// The request to create a new environment.
message CreateEnvironmentRequest {
  // The name of the project to create the environment in.
  string project_name = 1;
  // The name of the environment.
  string environment_name = 2;
}

// The response of creating a new environment.
message CreateEnvironmentResponse {
}
